capstone/VM/vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = "192.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "Final-lab"
  }
}

resource "aws_internet_gateway" "internet_gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "final-lab"
  }
}

resource "aws_subnet" "public_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "192.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "final-public-us-east-1a"
  }
}

resource "aws_subnet" "public_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "192.0.2.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name = "final-public-us-east-1b"
  }
}

resource "aws_route_table" "example" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.internet_gw.id
  }
}

resource "aws_route_table_association" "public_igw_1" {

  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.example.id
}

resource "aws_route_table_association" "public_igw_2" {

  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.example.id
}
